= Changelog

== Version 1.0.0-Beta2 - xx.xx.xxxx

* Cache is not autostarted anymore (svenkubiak)
* Fixed bug that throw NumberFormatException when passing an empty request parameter (svenkubiak)

== Version 1.0.0-Beta1 - 17.07.2015

* Added server "Undertow" token to response (svenkubiak)
* Added new lifecycle hook "applicationInitialized" (svenkubiak)
* Fixed bug that checked mode for testing incorrectly (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/10[#10] Added option to add additional headers to response (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/12[#12] Added option to autocast cache values (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/11[#11] Application name and secret is now generated from user input (svenkubiak) 
* https://github.com/svenkubiak/mangooio/issues/13[#13] Archetype now takes root project version on generation (svenkubiak) 
* Updated documentation (svenkubiak)
* Sonar refactorings (svenkubiak)

== Version 1.0.0-Alpha3 - 15.06.2015

* https://github.com/svenkubiak/mangooio/issues/2[#2] Fixed flash passing between requests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/1[#1] Fixed failing parameter tests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/6[#6] Version bump (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/5[#5] Added option for sending binary content (svenkubiak)
* Added HtmlUnitDriver to MangooUnit (svenkubiak)
* Removed changelog from documentation and added to seperate file (svenkubiak)
* Fixed bug that did not pass request parameter when project was generated from archetype (svenkubiak)

== Version 1.0.0-Alpha2 - 11.06.2015

* Added asciidoc documentation to mangooio-core (svenkubiak)

== Version 1.0.0-Alpha1 - 11.06.2015

* Initial release (svenkubiak)