@@ -2,6 +2,9 @@
 
 == Version 1.0.0-Beta2 - xx.xx.xxxx
 
+* https://github.com/svenkubiak/mangooio/issues/9[#9] Refactored dev mode exception page (svenkubiak)
+* https://github.com/svenkubiak/mangooio/issues/15[#15] Added version tag to documentation (PDF and HTML) (svenkubiak) 
+* https://github.com/svenkubiak/mangooio/issues/16[#16] Fixed bug that result in wrong compilation when in dev mode (svenkubiak) 
 * Cache is not autostarted anymore (svenkubiak)
 * Fixed bug that throw NumberFormatException when passing an empty request parameter (svenkubiak)
 
